--- a/composer.json
+++ b/composer.json
@@ -8,20 +8,18 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.2",
-        "fideloper/proxy": "^4.0",
-        "laravel/framework": "^6.0",
-        "laravel/tinker": "^1.0",
-        "laravel/ui": "^1.0",
-        "ext-json": "*"
+        "php": "^7.3",
+        "ext-json": "*",
+        "laravel/framework": "^8.15.0",
+        "guzzlehttp/guzzle": "^7.0.1",
+        "facade/ignition": "^2.3.6",
+        "laravel/ui": "^3.0"
     },
     "require-dev": {
-        "facade/ignition": "^1.4",
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
-        "nunomaduro/collision": "^3.0",
-        "nunomaduro/larastan": "^0.4.1",
-        "phpunit/phpunit": "^8.0"
+        "nunomaduro/collision": "^5.0",
+        "phpunit/phpunit": "^9.0"
     },
     "config": {
         "optimize-autoloader": true,
@@ -38,7 +36,7 @@
             "App\\": "app/"
         },
         "classmap": [
-            "database/seeds",
+            "database/seeders",
             "database/factories"
         ]
     },
